--- a/ConferenceWebSite/Web.config
+++ b/ConferenceWebSite/Web.config
@@ -11,14 +11,14 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-ConferenceWebSite-d7dc7682-147f-44f6-a4d6-9149ad81509d;AttachDbFilename=|DataDirectory|\aspnet-ConferenceWebSite-d7dc7682-147f-44f6-a4d6-9149ad81509d.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
     <!-- Change the connection string below. Change "comp3311stuXXX" to your Oracle user name and "XXXXXXXX" to your Oracle password -->
-    <add name="ConferenceConnectionString" connectionString="Data Source=comp3311.cse.ust.hk;User ID=comp3311stuXXX;Password=XXXXXXXX" providerName="System.Data.OracleClient"/>
+    <add name="ConferenceConnectionString" connectionString="Data Source=comp3311.cse.ust.hk;User ID=comp3311stu041;Password=rimaukbr" providerName="System.Data.OracleClient"/>
   </connectionStrings>
   <system.web>
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.6.1">
       <assemblies>
         <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-        <add assembly="Oracle.DataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89B483F429C47342"/>
+        <add assembly="Oracle.DataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89B483F429C47342"/>
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.6.1"/>
